test/test_wrong_argument_type_func_call/test_wrong_argument_type_func_call.mvs
func a(b: int) bool {
	return false;
};
a(a(5));
